--- a/api/Pipfile
+++ b/api/Pipfile
@@ -5,6 +5,7 @@ name = "pypi"
 
 [packages]
 django = "==5.2"
+pillow = "*"
 
 [dev-packages]
 
@@ -13,3 +14,4 @@ python_version = "3.12"
 
 [scripts]
 start = 'python manage.py runserver'
+migrate = 'python manage.py migrate'
