--- a/web/package.json
+++ b/web/package.json
@@ -16,9 +16,9 @@
     "@mui/material": "^7.0.2",
     "antd": "^5.25.1",
     "react": "^19.0.0",
-    "react-cookie-consent": "^9.0.0",
     "react-dom": "^19.0.0",
-    "react-router": "^7.5.0"
+    "react-router": "^7.5.0",
+    "vanilla-cookieconsent": "^3.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
