instalados paquetes para postgre

--- a/django_back/Pipfile
+++ b/django_back/Pipfile
@@ -11,6 +11,8 @@ tzdata = "*"
 gunicorn = "*"
 whitenoise = "*"
 python-decouple = "*"
+psycopg2-binary = "*"
+dj-database-url = "*"
 
 [dev-packages]
 
