--- a/django_back/Pipfile
+++ b/django_back/Pipfile
@@ -14,6 +14,8 @@ python-decouple = "*"
 psycopg2-binary = "*"
 dj-database-url = "*"
 python-dotenv = "*"
+cloudinary = "*"
+django-cloudinary-storage = "*"
 
 [dev-packages]
 
